delete community event

--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -10,7 +10,8 @@
                     d="M34.4627 6H30.8523V19.5H7.38474V22.5C7.38474 23.325 8.19708 24 9.18994 24H29.0471L36.2679 30V7.5C36.2679 6.675 35.4556 6 34.4627 6ZM27.2419 15V1.5C27.2419 0.675 26.4296 0 25.4367 0H1.96914C0.976281 0 0.16394 0.675 0.16394 1.5V22.5L7.38474 16.5H25.4367C26.4296 16.5 27.2419 15.825 27.2419 15Z"
                     class="fill-black dark:fill-white" />
             </svg>
-            RedditClone</a>
+            Tidder
+        </a>
     </div>
     <form class="max-w-md mx-auto w-[40%]">
         <label for="default-search"
