--- a/templates/components/community/community_event_detail.html
+++ b/templates/components/community/community_event_detail.html
@@ -9,45 +9,66 @@
     <div class="p-10 w-[85%] relative left-[15%]">
         <div class="flex flex-row justify-between">
             <div class="flex flex-row gap-4 items-start w-[75%]">
-                <div>
-                    <button onclick="history.back()" type="button" class="bg-button_gray hover:bg-button_gray_hover dark:bg-dark_2 dark:hover:bg-gray_2 rounded-full w-[40px] h-[40px] py-2 px-2 flex justify-center items-center">
-                        <svg rpl="" fill="currentColor" height="16" icon-name="left-outline" viewBox="0 0 20 20" width="16"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <path d="m13.058 19.442-9-9a.624.624 0 0 1 0-.884l9-9 .884.884L5.384 10l8.558 8.558-.884.884Z">
+                <div class="flex flex-col gap-2g">
+                    <button onclick="history.back()" type="button"
+                        class="bg-button_gray hover:bg-button_gray_hover dark:bg-dark_2 dark:hover:bg-gray_2 rounded-full w-[40px] h-[40px] py-2 px-2 flex justify-center items-center">
+                        <svg rpl="" fill="currentColor" height="16" icon-name="left-outline" viewBox="0 0 20 20"
+                            width="16" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="m13.058 19.442-9-9a.624.624 0 0 1 0-.884l9-9 .884.884L5.384 10l8.558 8.558-.884.884Z">
                             </path>
                         </svg>
                     </button>
+
+                    <button
+                        onclick="populate_delete_event_modal_input_values('{{event.id}}', '{{event.community.name}}');"
+                        class="bg-button_gray hover:bg-button_gray_hover dark:bg-dark_2 dark:hover:bg-gray_2 rounded-full w-[40px] h-[40px] py-2 px-2 flex justify-center items-center"
+                        data-modal-target="delete-event-modal" data-modal-toggle="delete-event-modal"
+                        >
+                        <svg rpl="" fill="currentColor" height="16" icon-name="delete-outline" viewBox="0 0 20 20"
+                            width="16" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M15.751 6.023 17 6.106l-.761 11.368a2.554 2.554 0 0 1-.718 1.741A2.586 2.586 0 0 1 13.8 20H6.2a2.585 2.585 0 0 1-1.718-.783 2.553 2.553 0 0 1-.719-1.737L3 6.106l1.248-.083.761 11.369c-.005.333.114.656.333.908.22.252.525.415.858.458h7.6c.333-.043.64-.207.859-.46.22-.254.338-.578.332-.912l.76-11.363ZM18 2.983v1.243H2V2.983h4v-.372A2.737 2.737 0 0 1 6.896.718 2.772 2.772 0 0 1 8.875.002h2.25c.729-.03 1.44.227 1.979.716.538.488.86 1.169.896 1.893v.372h4Zm-10.75 0h5.5v-.372a1.505 1.505 0 0 0-.531-1.014 1.524 1.524 0 0 0-1.094-.352h-2.25c-.397-.03-.79.097-1.094.352-.304.256-.495.62-.531 1.014v.372Z">
+                            </path>
+                        </svg>
+                    </button>
+
                 </div>
                 <div class="flex flex-col gap-3">
                     <div>
                         {% if request.user.id == event.host.id %}
                         <!-- TODO -->
-                            <div onClick='set_is_editing(true); set_current_edit("Avatar")' class='group flex
+                        <div onClick='set_is_editing(true); set_current_edit("Avatar")' class='group flex
                             items-center justify-center absolute transform right-1/2 translate-x-1/2 bottom-1/2
                             translate-y-1/2 w-20 h-20 rounded-full hover:bg-[#666666]/50'>
-                                <svg class='opacity-0 group-hover:opacity-100' rpl="" fill="currentColor" height="16"
-                                    icon-name="edit-outline" viewBox="0 0 20 20" width="16"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <path
-                                        d="m18.236 3.158-1.4-1.4a2.615 2.615 0 0 0-3.667-.021L1.336 13.318a1.129 1.129 0 0 0-.336.8v3.757A1.122 1.122 0 0 0 2.121 19h3.757a1.131 1.131 0 0 0 .8-.337L18.256 6.826a2.616 2.616 0 0 0-.02-3.668ZM5.824 17.747H2.25v-3.574l9.644-9.435L15.259 8.1l-9.435 9.647ZM17.363 5.952l-1.23 1.257-3.345-3.345 1.257-1.23a1.362 1.362 0 0 1 1.91.01l1.4 1.4a1.364 1.364 0 0 1 .008 1.908Z">
-                                    </path>
-                                </svg>
-                            </div>
+                            <svg class='opacity-0 group-hover:opacity-100' rpl="" fill="currentColor" height="16"
+                                icon-name="edit-outline" viewBox="0 0 20 20" width="16"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="m18.236 3.158-1.4-1.4a2.615 2.615 0 0 0-3.667-.021L1.336 13.318a1.129 1.129 0 0 0-.336.8v3.757A1.122 1.122 0 0 0 2.121 19h3.757a1.131 1.131 0 0 0 .8-.337L18.256 6.826a2.616 2.616 0 0 0-.02-3.668ZM5.824 17.747H2.25v-3.574l9.644-9.435L15.259 8.1l-9.435 9.647ZM17.363 5.952l-1.23 1.257-3.345-3.345 1.257-1.23a1.362 1.362 0 0 1 1.91.01l1.4 1.4a1.364 1.364 0 0 1 .008 1.908Z">
+                                </path>
+                            </svg>
+                        </div>
                         {% endif %}
 
                         {% if event.image|startswith:'https'%}
-                            <img class="w-72 h-72 object-cover rounded-md shadow-md" src="{{ event.image }}" alt="Event image">
+                        <img class="w-72 h-72 object-cover rounded-md shadow-md" src="{{ event.image }}"
+                            alt="Event image">
                         {% else %}
-                            <img class="w-72 h-72 object-cover rounded-md shadow-md" src="{% static event.image %}" alt="Event image">
+                        <img class="w-72 h-72 object-cover rounded-md shadow-md" src="{% static event.image %}"
+                            alt="Event image">
                         {% endif %}
                     </div>
-                    
-                    <a href = "{% url 'community:community' event.community.name %}" class="font-bold text-2xl flex flex-row gap-2 items-end">
+
+                    <a href="{% url 'community:community' event.community.name %}"
+                        class="font-bold text-2xl flex flex-row gap-2 items-end">
                         <div class="rounded-full w-12 h-12 bg-gray-200 shadow-md">
                             {% if event.community.avatar|startswith:'https'%}
-                                <img class="w-full h-full rounded-full object-cover" src="{{ event.community.avatar }}" alt="Community avatar">
+                            <img class="w-full h-full rounded-full object-cover" src="{{ event.community.avatar }}"
+                                alt="Community avatar">
                             {% else %}
-                                <img class="w-full h-full rounded-full object-cover" src="{% static event.community.avatar %}" alt="Community avatar">
+                            <img class="w-full h-full rounded-full object-cover"
+                                src="{% static event.community.avatar %}" alt="Community avatar">
                             {% endif %}
                         </div>
                         r/{{event.community.name}}
@@ -56,9 +77,9 @@
                     <div class="flex flex-row items-center gap-2">
                         <div class="w-12 h-12 border rounded-md flex flex-col items-center shadow-md">
                             <div class="h-[1px] w-full border-t relative top-[35%]"></div>
-                            <p id = "mini_calendar_month" class="relative text-xs"></p>
-                            <p id = "mini_calendar_day"></p>
-                        </div> 
+                            <p id="mini_calendar_month" class="relative text-xs"></p>
+                            <p id="mini_calendar_day"></p>
+                        </div>
 
                         <div class="flex flex-col justify-between items-start ">
                             <p>{{event.start_date}}</p>
@@ -68,11 +89,16 @@
 
                     <div class="flex flex-row items-center gap-2">
                         <div class="w-12 h-12 border rounded-md flex flex-col items-center justify-center shadow-md">
-                            <svg class = "stroke-black dark:stroke-white" width="26" height="26" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M2 6.854C2 11.02 7.04 15 8 15C8.96 15 14 11.02 14 6.854C14 3.621 11.314 1 8 1C4.686 1 2 3.62 2 6.854Z" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"/>
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M9.5 6.5C9.5 6.89782 9.34196 7.27936 9.06066 7.56066C8.77936 7.84196 8.39782 8 8 8C7.60218 8 7.22064 7.84196 6.93934 7.56066C6.65804 7.27936 6.5 6.89782 6.5 6.5C6.5 6.10218 6.65804 5.72064 6.93934 5.43934C7.22064 5.15804 7.60218 5 8 5C8.39782 5 8.77936 5.15804 9.06066 5.43934C9.34196 5.72064 9.5 6.10218 9.5 6.5Z" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"/>
+                            <svg class="stroke-black dark:stroke-white" width="26" height="26" viewBox="0 0 16 16"
+                                fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M2 6.854C2 11.02 7.04 15 8 15C8.96 15 14 11.02 14 6.854C14 3.621 11.314 1 8 1C4.686 1 2 3.62 2 6.854Z"
+                                    stroke-width="1" stroke-linecap="round" stroke-linejoin="round" />
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M9.5 6.5C9.5 6.89782 9.34196 7.27936 9.06066 7.56066C8.77936 7.84196 8.39782 8 8 8C7.60218 8 7.22064 7.84196 6.93934 7.56066C6.65804 7.27936 6.5 6.89782 6.5 6.5C6.5 6.10218 6.65804 5.72064 6.93934 5.43934C7.22064 5.15804 7.60218 5 8 5C8.39782 5 8.77936 5.15804 9.06066 5.43934C9.34196 5.72064 9.5 6.10218 9.5 6.5Z"
+                                    stroke-width="1" stroke-linecap="round" stroke-linejoin="round" />
                             </svg>
-                        </div> 
+                        </div>
                         <p>{{event.location}}</p>
                     </div>
 
@@ -80,13 +106,13 @@
                         <p class="font-medium text-sm">Hosted by</p>
                         <div class="flex flex-row gap-1">
                             {%if event.host.avatar %}
-                                {%if event.host.avatar|startswith:'https'%}
-                                    <img class="w-7 h-7 rounded-full" src="{{event.host.avatar}}" alt="Host avatar">
-                                {% else %}
-                                    <img class="w-7 h-7 rounded-full" src="{% static event.host.avatar %}" alt="Host avatar">
-                                {% endif %}
+                            {%if event.host.avatar|startswith:'https'%}
+                            <img class="w-7 h-7 rounded-full" src="{{event.host.avatar}}" alt="Host avatar">
                             {% else %}
-                                <div class="w-7 h-7 bg-black rounded-full"></div>
+                            <img class="w-7 h-7 rounded-full" src="{% static event.host.avatar %}" alt="Host avatar">
+                            {% endif %}
+                            {% else %}
+                            <div class="w-7 h-7 bg-black rounded-full"></div>
                             {% endif %}
                             <p>{{event.host.username}}</p>
                         </div>
@@ -105,6 +131,9 @@
         </div>
     </div>
 </div>
+
+{% include 'components/community/delete_event_modal.html'%}
+
 <script>
     document.addEventListener("DOMContentLoaded", function () {
         const postContents = document.querySelectorAll('.post-content');
