--- a/templates/base.html
+++ b/templates/base.html
@@ -7,11 +7,10 @@
     <meta name="csrf-token" content="{{ csrf_token }}">
     {% load static %}
     <!-- <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.css" rel="stylesheet" /> -->
-    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
-    <script src = "{% static 'js/tailwind.js'%}"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- <script src = "{% static 'js/tailwind.js'%}"></script> -->
     <link rel="stylesheet" href="{% static 'css/flowbite.min.css'%}">
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script> -->
-
     {% block quill %}
     {% endblock %}
 
@@ -269,8 +268,6 @@
 
     {% block content %}
     {% endblock %}
-
-
     <script src="{% static 'js/flowbite.min.js'%}"></script>
 </body>
 </html>
