--- a/templates/components/post/post_control.html
+++ b/templates/components/post/post_control.html
@@ -13,7 +13,8 @@
     <ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefaultButton-{{post.id}}">
         <li>
             <button
-                class="flex flex-row gap-2 px-4 py-2 w-full hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">
+                class="flex flex-row gap-2 px-4 py-2 w-full hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white" 
+                onclick="event.stopPropagation(); window.location.href=`{% url 'post:edit_post' post.id %}`">
                 <svg rpl="" fill="currentColor" height="20" icon-name="edit-outline" viewBox="0 0 20 20" width="20"
                     xmlns="http://www.w3.org/2000/svg">
                     <path
