--- a/templates/components/community/community_events.html
+++ b/templates/components/community/community_events.html
@@ -4,8 +4,7 @@
 <div class="flex flex-row gap-1 items-center font-medium">
     <h1 class="text-txt_color_3 dark:text-white_2 text-md">UPCOMING EVENTS</h1>
     {% if user_role == 'moderator' or user_role == 'admin' %}
-
-    <a href = "{% url 'community:create_event' community.name %}" class='bg-button_gray hover:bg-button_gray_hover dark:bg-dark_1 dark:hover:bg-dark_2 rounded-full p-2'>
+    <a href = "{% url 'community:event' community.name %}" class='bg-button_gray hover:bg-button_gray_hover dark:bg-dark_1 dark:hover:bg-dark_2 rounded-full p-2'>
 
         <svg width="14" height="14" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
             <path d="M19 9.375h-8.375V1h-1.25v8.375H1v1.25h8.375V19h1.25v-8.375H19v-1.25Z"></path>
@@ -19,7 +18,7 @@
     {% if events|length > 0 %}
     {% for event in events %}
     <li class="border-b rounded-t dark:border-gray-600 mb-2 italic">
-        <div onclick = "window.location.href = `{% url 'community:community_event_detail' event.community.name event.id %}`" class="flex flex-col gap-2 group">
+        <div onclick="window.location.href = `{% url 'community:event' event.community.name %}?event_id={{ event.id }}`" class="flex flex-col gap-2 group">
             <label for="t-{{event.id}}"
                 class="flex flex-row justify-between items-center rounded-lg w-full cursor-pointer">
                 <div class="flex flex-col gap-1">
@@ -29,7 +28,7 @@
                 <div class="flex flex-row gap-1 items-center">
                     {% if user_role == 'moderator' or user_role == 'admin' %}
                     <div>
-                        <button data-modal-target="edit_community_rule" data-modal-toggle="edit_community_rule"
+                        <button onclick = "event.stopPropagation()" data-modal-target="edit_community_rule" data-modal-toggle="edit_community_rule"
                             onclick="populate_edit_input_values('{{rule.name}}', '{{rule.description}}', '{{rule.id}}')">
                             <svg rpl="" fill="currentColor" height="14" icon-name="edit-outline" viewBox="0 0 20 20"
                                 width="14" xmlns="http://www.w3.org/2000/svg">
@@ -39,7 +38,7 @@
                             </svg>
                         </button>
                     </div>
-                    <button onclick = "event.stopPropagation(); populate_delete_community_event_input_values('{{event.id}}', '{{event.name}}')" data-modal-target="delete_community_event" data-modal-toggle="delete_community_event" type="button">
+                    <button onclick="event.stopPropagation(); populate_values(['input_event_id', 'txt_event_name'], ['{{event.id}}', '{{event.name}}'])" data-modal-target="delete_community_event" data-modal-toggle="delete_community_event" type="button">
                         <svg rpl="" fill="currentColor" height="14" icon-name="delete-outline" viewBox="0 0 20 20"
                             width="14" xmlns="http://www.w3.org/2000/svg">
                             <path
