--- a/templates/components/account/sign_in.html
+++ b/templates/components/account/sign_in.html
@@ -1,53 +1,91 @@
 <script src="https://accounts.google.com/gsi/client" async></script>
 
-<div id="sign_in_modal" aria-hidden="true"
-    class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
-    <div class="relative w-full max-w-2xl max-h-full w-1/3">
-        <!-- <form method="POST" action="https://21fb-180-190-221-245.ngrok-free.app/account/sign_in/" -->
-        <form method="POST" action="{% url 'account:sign_in' %}"
-            class="bg-white dark:text-white_1 dark:bg-dark_5 text-black flex flex-col gap-4 justify-center  py-10 px-16 rounded-2xl">
-            {% csrf_token %}
-            <h1 class="text-xl font-bold">Login</h1>
-            <div class="flex flex-col gap-4">
-                <div class="relative">
-                    <input name="email_or_username" id="sign_in_email_input"
-                        class="bg-white_1 dark:bg-dark_6 block px-2.5 pb-2.5 pt-4 w-full text-sm text-gray-900 rounded-lg border-1 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer"
-                        placeholder=" " type="text">
-                    <label for="sign_in_email_input"
-                        class="absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-4 scale-75 top-4 z-10 origin-[0] start-2.5 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-4 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto">Email
-                        or username</label>
-                </div>
-                <div class="relative">
-                    <input id="sign_in_password" name="password"
-                        class="bg-white_1 dark:bg-dark_6 block px-2.5 pb-2.5 pt-4 w-full text-sm text-gray-900 rounded-lg border-1 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer"
-                        type="password" placeholder=" ">
-                    <label for="sign_in_password"
-                        class="absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-4 scale-75 top-4 z-10 origin-[0] start-2.5 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-4 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto">Password</label>
-                </div>
-            </div>
-            <span class="flex flex-row gap-1 text-xs">
-                <p>Don't have an account?</p>
+<div
+  id="sign_in_modal"
+  aria-hidden="true"
+  class="fixed left-0 right-0 top-0 z-50 hidden h-[calc(100%-1rem)] max-h-full w-full items-center justify-center overflow-y-auto overflow-x-hidden md:inset-0"
+>
+  <div class="relative max-h-full w-1/3 w-full max-w-2xl">
+    <!-- <form method="POST" action="https://21fb-180-190-221-245.ngrok-free.app/account/sign_in/" -->
+    <form
+      method="POST"
+      action="{% url 'account:sign_in' %}"
+      class="flex flex-col justify-center gap-4 rounded-2xl bg-white px-16 py-10 text-black dark:bg-dark_5 dark:text-white_1"
+    >
+      {% csrf_token %}
+      <h1 class="text-xl font-bold">Login</h1>
+      <div class="flex flex-col gap-4">
+        <div class="relative">
+          <input
+            name="email_or_username"
+            id="sign_in_email_input"
+            class="border-1 dark:focus:border-blue-500 focus:border-blue-600 peer block w-full appearance-none rounded-lg border-gray-300 bg-white_1 px-2.5 pb-2.5 pt-4 text-sm text-gray-900 focus:outline-none focus:ring-0 dark:border-gray-600 dark:bg-dark_6 dark:text-white"
+            placeholder=" "
+            type="text"
+          />
+          <label
+            for="sign_in_email_input"
+            class="peer-focus:text-blue-600 peer-focus:dark:text-blue-500 absolute start-2.5 top-4 z-10 origin-[0] -translate-y-4 scale-75 transform text-sm text-gray-500 duration-300 peer-placeholder-shown:translate-y-0 peer-placeholder-shown:scale-100 peer-focus:-translate-y-4 peer-focus:scale-75 dark:text-gray-400 rtl:peer-focus:left-auto rtl:peer-focus:translate-x-1/4"
+            >Email or username</label
+          >
+        </div>
+        <div class="relative">
+          <input
+            id="sign_in_password"
+            name="password"
+            class="border-1 dark:focus:border-blue-500 focus:border-blue-600 peer block w-full appearance-none rounded-lg border-gray-300 bg-white_1 px-2.5 pb-2.5 pt-4 text-sm text-gray-900 focus:outline-none focus:ring-0 dark:border-gray-600 dark:bg-dark_6 dark:text-white"
+            type="password"
+            placeholder=" "
+          />
+          <label
+            for="sign_in_password"
+            class="peer-focus:text-blue-600 peer-focus:dark:text-blue-500 absolute start-2.5 top-4 z-10 origin-[0] -translate-y-4 scale-75 transform text-sm text-gray-500 duration-300 peer-placeholder-shown:translate-y-0 peer-placeholder-shown:scale-100 peer-focus:-translate-y-4 peer-focus:scale-75 dark:text-gray-400 rtl:peer-focus:left-auto rtl:peer-focus:translate-x-1/4"
+            >Password</label
+          >
+        </div>
+      </div>
+      <span class="flex flex-row gap-1 text-xs">
+        <p>Don't have an account?</p>
 
-                <button type="button" data-modal-target="sign_up_modal" data-modal-toggle="sign_up_modal"
-                    data-modal-hide="sign_in_modal" class="text-blue-500 cursor-pointer">Sign up now</button>
-            </span>
+        <button
+          type="button"
+          data-modal-target="sign_up_modal"
+          data-modal-toggle="sign_up_modal"
+          data-modal-hide="sign_in_modal"
+          class="text-blue-500 cursor-pointer"
+        >
+          Sign up now
+        </button>
+      </span>
 
-            <div class="flex flex-col gap-4">
-                <button type="submit"
-                    class="rounded-3xl px-3 py-2 w-full bg-button_red text-white font-md transition-all duration-300 ease-in-out hover:bg-button_red_hover hover:text-white">
-                    Login
-                </button>
+      <div class="flex flex-col gap-4">
+        <button
+          type="submit"
+          class="font-md w-full rounded-3xl bg-button_red px-3 py-2 text-white transition-all duration-300 ease-in-out hover:bg-button_red_hover hover:text-white"
+        >
+          Login
+        </button>
 
-                <div class="w-full flex flex-row justify-center">
-                    <div id="g_id_onload"
-                        data-client_id="245316070777-i13g0d10qdahvm5egq33dhifn3gqesi1.apps.googleusercontent.com"
-                        data-context="signin" data-ux_mode="popup"
-                        data-login_uri="http://localhost:8000/account/auth-receiver" data-auto_prompt="false">
-                    </div>
-                    <div class="g_id_signin" data-type="standard" data-shape="pill" data-text="signin_with"
-                        data-size="large" data-logo_alignment="center" data-theme="outline"></div>
-                </div>
-            </div>
-        </form>
-    </div>
+        <div class="flex w-full flex-row justify-center">
+          <div
+            id="g_id_onload"
+            data-client_id="245316070777-i13g0d10qdahvm5egq33dhifn3gqesi1.apps.googleusercontent.com"
+            data-context="signin"
+            data-ux_mode="popup"
+            data-login_uri="http://localhost:8000/account/auth-receiver"
+            data-auto_prompt="false"
+          ></div>
+          <div
+            class="g_id_signin"
+            data-type="standard"
+            data-shape="pill"
+            data-text="signin_with"
+            data-size="large"
+            data-logo_alignment="center"
+            data-theme="outline"
+          ></div>
+        </div>
+      </div>
+    </form>
+  </div>
 </div>
