--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,26 +1,22 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} {% block content %}
 
-{% block content %}
+<div class="relative top-[10vh] flex w-full flex-row">
+  {% include 'components/leftbar.html'%}
 
-<div class="flex flex-row w-full relative top-[10vh]">
-    {% include 'components/leftbar.html'%}
+  <div class="relative left-[15%] flex w-[85%] flex-row gap-10 p-10">
+    <div class="w-[75%]">{% include 'components/post/posts.html' %}</div>
 
-    <div class="p-10 w-[85%] relative left-[15%] flex flex-row gap-10 ">
-        <div class="w-[75%]">
-            {% include 'components/post/posts.html' %}
+    <div class="w-[25%]">
+      <div
+        class="sticky top-[15vh] inline-block flex h-min max-h-[85vh] max-w-sm flex-col gap-3 overflow-auto rounded-lg border bg-bg_1 p-6 shadow-md dark:border-gray-700 dark:bg-dark_2"
+      >
+        <div class="flex w-full flex-row justify-between">
+          <h1 class="text-sm font-semibold">RECENT POSTS</h1>
+          <button>Clear</button>
         </div>
-
-        <div class="w-[25%]">
-            <div class="inline-block flex flex-col gap-3 max-w-sm p-6 bg-bg_1 shadow-md rounded-lg dark:bg-dark_2 border dark:border-gray-700 sticky top-[15vh] h-min max-h-[85vh] overflow-auto">
-                <div class="flex flex-row justify-between w-full">
-                    <h1 class="text-sm font-semibold">RECENT POSTS</h1>
-                    <button>Clear</button>
-                </div>
-            </div>
-        </div>
+      </div>
     </div>
+  </div>
 </div>
 
-
 {% endblock %}
-
