--- a/templates/base.html
+++ b/templates/base.html
@@ -6,9 +6,7 @@
     <meta name="csrf-token" content="{{ csrf_token }}" />
     {% load static %}
     <!-- <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.css" rel="stylesheet" /> -->
-    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
-    <script src="{% static 'js/tailwind.js'%}"></script>
-    <!-- <link rel="stylesheet" href="{% static 'css/output.css'%}"> -->
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="{% static 'css/flowbite.min.css'%}" />
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script> -->
     {% block quill %} {% endblock %}
@@ -31,7 +29,7 @@
         theme: {
           extend: {
             colors: {
-              dark_1: "#0E1113",
+                dark_1: "#0E1113",
               dark_2: "#05090B",
               dark_3: "#101214",
               dark_4: "#333D42",
@@ -55,8 +53,8 @@
               txt_color_2: "#33363B",
               txt_color_3: "#697075",
               bg_1: "#F5F4F6",
-              red: "#D83901",
-              blue: "#6B5CFE",
+              <!-- red: "#D83901", -->
+              <!-- blue: "#6B5CFE", -->
             },
           },
         },
